[tool.poetry]
name = "dvmn_stats_project"
version = "0.1.0"
description = ""
authors = ["n1k0din <nik726@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
typer = "^0.3.2"
beautifulsoup4 = "^4.9.3"
dataclass-csv = "^1.3.0"
lxml = "^4.6.3"
fastapi = "^0.65.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
